# Changelog

## 0.7.4 - 2025-11-05

### Added

- Integration test `test_auto_mode_scrubs_with_hardening_flags` to verify auto mode succeeds under `--read-only` and `--security-opt no-new-privileges`
- Embedded minimal JPEG fixture for container tests so the hardened run covers real data writes

### Improved

- README and DETAILS quick-start examples now default to the hardened Docker flags
- DETAILS now documents what the hardening flags do, when they matter, and common pitfalls (tmpfs for `/tmp`, ensuring mount writability)

### Security

- Formalized hardened launch guidance across docs to drive consistent `--read-only` + `no-new-privileges` usage

## 0.7.3 - 2025-11-04

### Added

- New `--debug` CLI flag to enable verbose logging without remembering `--log-level` values

### Fixed

- `scrub_file` now passes the full destination filename to ExifTool, so auto mode writes into `/output/<name>.jpg` and duplicate reporting uses the correct path
- Added bulk auto-mode coverage that seeds 50 JPEGs with EXIF/XMP/IPTC/GPS data and confirms every output is scrubbed in the container suite

### Security

- Refuse to scrub into symlinked output files or move originals onto symlink targets

## 0.7.2 - 2025-11-03

### Security

- Hardened manual-mode path handling to keep CLI inputs confined to `/photos`
- Added regression tests exercising container breakout attempts
- Reject symlinked JPEGs in manual and auto flows to block host-path traversal
- Refuse to scrub into symlinked output files or move originals onto symlink targets

### Fixed

- Auto mode no longer crashes when `--delete-original` removes the source before moving to `/photos/processed`
- Preview mode now closes temporary files before copying so Windows runs succeed

## 0.7.1 - 2025-11-02

### Added

- New `--state-file` CLI option to override `SCRUBEXIF_STATE`
- Documentation split: short README + full `doc/DETAILS.md`
- Added summary tests validating state-file override logic