@@ -39,8 +39,9 @@ Scrub current directory (hardened container defaults):
 ```bash
 docker run -it --rm \
   --read-only --security-opt no-new-privileges \
+  --tmpfs /tmp \
   -v "$PWD:/photos" \
-  per2jensen/scrubexif:0.7.3
+  per2jensen/scrubexif:0.7.4
 ```
 
 Batch workflow:
@@ -49,10 +50,11 @@ Batch workflow:
 mkdir input output processed
 docker run -it --rm \
   --read-only --security-opt no-new-privileges \
+  --tmpfs /tmp \
   -v "$PWD/input:/photos/input" \
   -v "$PWD/output:/photos/output" \
   -v "$PWD/processed:/photos/processed" \
-  per2jensen/scrubexif:0.7.3 --from-input
+  per2jensen/scrubexif:0.7.4 --from-input
 ```
 
 Uploads → `input/`  
@@ -100,10 +102,11 @@ In the real world the systemd services starts a script, which nudges photoprism 
 [Service]
 ExecStart=/usr/bin/docker run --rm \
   --read-only --security-opt no-new-privileges \
+  --tmpfs /tmp \
   -v /tmp/upload:/photos/input \
   -v /photoprism/sooc:/photos/output \
   -v /photoprism/processed:/photos/processed \
-  per2jensen/scrubexif:0.7.3 --from-input --stable-seconds 10
+  per2jensen/scrubexif:0.7.4 --from-input --stable-seconds 10
 ```
 
 /etc/systemd/system/scrubexif.timer example:
